Update Movie backend