@@ -7,16 +7,14 @@ import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
+import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -24,296 +22,327 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import lombok.RequiredArgsConstructor;
-import ua.lviv.bas.cinema.domain.Genre;
+import lombok.extern.slf4j.Slf4j;
 import ua.lviv.bas.cinema.domain.Movie;
-import ua.lviv.bas.cinema.domain.Person;
 import ua.lviv.bas.cinema.domain.enums.MovieStatus;
 import ua.lviv.bas.cinema.dto.MovieCreateRequest;
 import ua.lviv.bas.cinema.dto.MovieDto;
+import ua.lviv.bas.cinema.dto.MovieResponse;
+import ua.lviv.bas.cinema.dto.MovieUpdateRequest;
+import ua.lviv.bas.cinema.exception.DuplicateEntityException;
+import ua.lviv.bas.cinema.exception.MovieNotFoundException;
 import ua.lviv.bas.cinema.mapper.MovieMapper;
 import ua.lviv.bas.cinema.repository.GenreRepository;
 import ua.lviv.bas.cinema.repository.MovieRepository;
 import ua.lviv.bas.cinema.repository.PersonRepository;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
-@Transactional
 public class MovieService {
-
-	private static final Logger logger = LogManager.getLogger(MovieService.class);
 
 	private final MovieRepository movieRepository;
 	private final GenreRepository genreRepository;
 	private final PersonRepository personRepository;
 	private final MovieMapper movieMapper;
+	private final SlugService slugService;
 
 	@Value("${app.upload.dir:uploads}")
 	private String uploadDir;
 
 	@Transactional
-	public MovieDto createMovie(MovieCreateRequest request) {
-		logger.info("Creating movie: {}", request.getTitle());
+	public MovieDto create(MovieCreateRequest request) {
+		log.info("Creating movie: {}", request.getTitle());
 
-		validateMovieDates(request.getReleaseDate(), request.getEndShowingDate());
+		validateCreateRequest(request);
 
-		if (movieRepository.findBySlug(request.getSlug()).isPresent()) {
-			throw new RuntimeException("Movie with slug '" + request.getSlug() + "' already exists");
-		}
+		String slug = slugService.generateUniqueSlug(request.getTitle());
+		validateSlugUniqueness(slug);
 
 		Movie movie = movieMapper.toEntity(request);
+		movie.setSlug(slug);
+		movie.setStatus(calculateStatus(movie, LocalDate.now()));
 
-		if (request.getPosterFile() != null && !request.getPosterFile().isEmpty()) {
-			String fileName = savePosterFile(request.getPosterFile());
-			movie.setPosterFileName(fileName);
-		}
-
+		handlePosterUpload(request.getPosterFile(), movie);
 		setMovieRelations(movie, request);
 
-		Movie savedMovie = movieRepository.save(movie);
-		return movieMapper.toDto(savedMovie);
+		Movie saved = movieRepository.save(movie);
+		log.debug("Movie created with ID: {}", saved.getId());
+		return enrichWithComputedFields(saved);
 	}
 
 	@Transactional
-	public MovieDto updateMovie(Long id, MovieDto movieDto) {
-		logger.info("Updating movie with id: {}", id);
+	public MovieDto update(Long id, MovieUpdateRequest request) {
+		return update(id, request, null);
+	}
 
-		Movie existingMovie = getMovieEntityById(id);
-		validateMovieDates(movieDto.getReleaseDate(), movieDto.getEndShowingDate());
+	@Transactional
+	public MovieDto update(Long id, MovieUpdateRequest request, MultipartFile posterFile) {
+		log.info("Updating movie with id: {}", id);
 
-		if (!existingMovie.getSlug().equals(movieDto.getSlug())
-				&& movieRepository.findBySlug(movieDto.getSlug()).isPresent()) {
-			throw new RuntimeException("Movie with slug '" + movieDto.getSlug() + "' already exists");
+		Movie existing = findMovieById(id);
+		validateUpdateRequest(request);
+
+		movieMapper.updateEntityFromRequest(request, existing);
+
+		if (!existing.getTitle().equals(request.getTitle())) {
+			String newSlug = slugService.generateUniqueSlug(request.getTitle());
+			if (!slugService.isSlugAvailableForMovie(newSlug, id)) {
+				throw new DuplicateEntityException("Slug '" + newSlug + "' already exists");
+			}
+			existing.setSlug(newSlug);
 		}
 
-		movieMapper.updateMovieFromDto(movieDto, existingMovie);
-		updateMovieRelations(existingMovie, movieDto);
+		handlePosterUpdate(existing, posterFile, request.getRemovePoster());
 
-		Movie updatedMovie = movieRepository.save(existingMovie);
-		return movieMapper.toDto(updatedMovie);
+		existing.setStatus(calculateStatus(existing, LocalDate.now()));
+		updateMovieRelations(existing, request);
+
+		Movie updated = movieRepository.save(existing);
+		log.debug("Movie updated with ID: {}", updated.getId());
+		return enrichWithComputedFields(updated);
 	}
 
 	@Transactional
-	public MovieDto updateMovieWithPoster(Long id, MovieDto movieDto, MultipartFile posterFile) {
-		logger.info("Updating movie with id: {} and poster", id);
+	public void delete(Long id) {
+		log.info("Deleting movie with id: {}", id);
 
-		Movie existingMovie = getMovieEntityById(id);
-
-		if (posterFile != null && !posterFile.isEmpty()) {
-			deletePosterFile(existingMovie.getPosterFileName());
-			String fileName = savePosterFile(posterFile);
-			existingMovie.setPosterFileName(fileName);
-		}
-
-		return updateMovie(id, movieDto);
-	}
-
-	@Transactional
-	public void deleteMovie(Long id) {
-		logger.info("Deleting movie by id: {}", id);
-		Movie movie = getMovieEntityById(id);
-
+		Movie movie = findMovieById(id);
 		deletePosterFile(movie.getPosterFileName());
-		movieRepository.deleteById(id);
+		movieRepository.delete(movie);
+
+		log.debug("Movie deleted with ID: {}", id);
 	}
 
 	@Transactional(readOnly = true)
-	public MovieDto getMovieById(Long id) {
-		logger.info("Reading movie by id: {}", id);
-		return movieMapper.toDto(getMovieEntityById(id));
+	public MovieDto getById(Long id) {
+		log.debug("Retrieving movie by id: {}", id);
+		Movie movie = findMovieById(id);
+		return enrichWithComputedFields(movie);
 	}
 
 	@Transactional(readOnly = true)
-	public MovieDto getMovieBySlug(String slug) {
-		logger.info("Reading movie by slug: {}", slug);
-		return movieRepository.findBySlug(slug).map(movieMapper::toDto)
-				.orElseThrow(() -> new RuntimeException("Movie not found with slug: " + slug));
+	public MovieDto getBySlug(String slug) {
+		log.debug("Retrieving movie by slug: {}", slug);
+		Movie movie = movieRepository.findBySlug(slug)
+				.orElseThrow(() -> new MovieNotFoundException("Movie not found with slug: " + slug));
+		return enrichWithComputedFields(movie);
 	}
 
 	@Transactional(readOnly = true)
-	public List<MovieDto> getAllMovies() {
-		logger.info("Retrieving all movies");
-		return movieRepository.findAll().stream().map(movieMapper::toDto).collect(Collectors.toList());
+	public List<MovieDto> getAll() {
+		log.debug("Retrieving all movies");
+		return movieRepository.findAll().stream().map(this::enrichWithComputedFields).toList();
 	}
 
 	@Transactional(readOnly = true)
-	public Page<MovieDto> getPaginatedMovies(Pageable pageable) {
-		logger.info("Getting paginated movies - page: {}, size: {}", pageable.getPageNumber(), pageable.getPageSize());
-		return movieRepository.findAll(pageable).map(movieMapper::toDto);
+	public Page<MovieDto> getPaginated(Pageable pageable) {
+		log.debug("Getting paginated movies - page: {}, size: {}", pageable.getPageNumber(), pageable.getPageSize());
+		return movieRepository.findAll(pageable).map(this::enrichWithComputedFields);
 	}
 
 	@Transactional(readOnly = true)
-	public List<MovieDto> getMoviesByStatus(String status) {
-		logger.info("Getting movies by status: {}", status);
+	public List<MovieResponse> getCurrentlyShowing() {
+		log.debug("Retrieving currently showing movies");
+		return movieRepository.findByStatus(MovieStatus.CURRENT).stream().map(movieMapper::toResponse).toList();
+	}
+
+	@Transactional(readOnly = true)
+	public List<MovieResponse> getUpcoming() {
+		log.debug("Retrieving upcoming movies");
+		return movieRepository.findByStatus(MovieStatus.UPCOMING).stream().map(movieMapper::toResponse).toList();
+	}
+
+	@Transactional(readOnly = true)
+	public List<MovieResponse> getArchived() {
+		log.debug("Retrieving archived movies");
+		return movieRepository.findByStatus(MovieStatus.ARCHIVED).stream().map(movieMapper::toResponse).toList();
+	}
+
+	@Transactional(readOnly = true)
+	public ResponseEntity<byte[]> getPoster(Long id) {
 		try {
-			MovieStatus movieStatus = MovieStatus.valueOf(status.toUpperCase());
-			return movieRepository.findByStatus(movieStatus).stream().map(movieMapper::toDto)
-					.collect(Collectors.toList());
-		} catch (IllegalArgumentException e) {
-			throw new RuntimeException("Invalid movie status: " + status);
-		}
-	}
-
-	@Transactional(readOnly = true)
-	public List<MovieDto> getCurrentlyShowingMovies() {
-		logger.info("Getting currently showing movies");
-		LocalDate now = LocalDate.now();
-		return movieRepository.findByReleaseDateBeforeAndEndShowingDateAfter(now, now).stream().map(movieMapper::toDto)
-				.collect(Collectors.toList());
-	}
-
-	@Transactional(readOnly = true)
-	public List<MovieDto> getUpcomingMovies() {
-		logger.info("Getting upcoming movies");
-		LocalDate now = LocalDate.now();
-		return movieRepository.findByReleaseDateAfter(now).stream().map(movieMapper::toDto)
-				.collect(Collectors.toList());
-	}
-
-	@Transactional(readOnly = true)
-	public List<MovieDto> getMoviesByGenre(Long genreId) {
-		logger.info("Getting movies by genre id: {}", genreId);
-
-		if (!genreRepository.existsById(genreId)) {
-			throw new RuntimeException("Genre not found with id: " + genreId);
-		}
-
-		return movieRepository.findByGenresContaining(genreId).stream().map(movieMapper::toDto)
-				.collect(Collectors.toList());
-	}
-
-	@Transactional(readOnly = true)
-	public ResponseEntity<byte[]> getMoviePoster(Long id) {
-		try {
-			Movie movie = getMovieEntityById(id);
-
-			if (movie.getPosterFileName() == null || movie.getPosterFileName().isEmpty()) {
+			Movie movie = findMovieById(id);
+			if (movie.getPosterFileName() == null || movie.getPosterFileName().isBlank()) {
 				return ResponseEntity.notFound().build();
 			}
 
-			Path filePath = Paths.get(uploadDir, "posters", movie.getPosterFileName());
-
-			if (!Files.exists(filePath)) {
+			Path path = Paths.get(uploadDir, "posters", movie.getPosterFileName());
+			if (!Files.exists(path)) {
 				return ResponseEntity.notFound().build();
 			}
 
+			byte[] data = Files.readAllBytes(path);
 			String contentType = determineContentType(movie.getPosterFileName());
-			byte[] imageBytes = Files.readAllBytes(filePath);
 
 			return ResponseEntity.ok().contentType(MediaType.parseMediaType(contentType))
-					.header(HttpHeaders.CACHE_CONTROL, "max-age=3600").body(imageBytes);
-
-		} catch (Exception e) {
-			logger.error("Error loading poster for movie id: {}", id, e);
-			return ResponseEntity.notFound().build();
+					.header(HttpHeaders.CACHE_CONTROL, "max-age=3600").body(data);
+		} catch (IOException e) {
+			log.error("Error loading poster for movie id: {}", id, e);
+			return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
 		}
 	}
 
-	private Movie getMovieEntityById(Long id) {
-		return movieRepository.findById(id).orElseThrow(() -> new RuntimeException("Movie not found with id: " + id));
+	private Movie findMovieById(Long id) {
+		return movieRepository.findById(id)
+				.orElseThrow(() -> new MovieNotFoundException("Movie not found with id: " + id));
 	}
 
-	private void validateMovieDates(LocalDate releaseDate, LocalDate endShowingDate) {
-		if (endShowingDate.isBefore(releaseDate)) {
-			throw new RuntimeException("End showing date cannot be before release date");
+	private void validateCreateRequest(MovieCreateRequest request) {
+		if (request.getEndShowingDate().isBefore(request.getReleaseDate())) {
+			throw new IllegalArgumentException("End showing date cannot be before release date");
+		}
+
+		if (request.getReleaseDate().isBefore(LocalDate.now())) {
+			throw new IllegalArgumentException("Release date cannot be in the past for new movies");
+		}
+	}
+
+	private void validateUpdateRequest(MovieUpdateRequest request) {
+		if (request.getEndShowingDate().isBefore(request.getReleaseDate())) {
+			throw new IllegalArgumentException("End showing date cannot be before release date");
+		}
+
+		if (request.getReleaseDate().isBefore(LocalDate.now().minusYears(1))) {
+			throw new IllegalArgumentException("Release date cannot be more than 1 year in the past");
+		}
+	}
+
+	private void validateSlugUniqueness(String slug) {
+		if (movieRepository.findBySlug(slug).isPresent()) {
+			throw new DuplicateEntityException("Movie with slug '" + slug + "' already exists");
+		}
+	}
+
+	private MovieStatus calculateStatus(Movie movie, LocalDate referenceDate) {
+		if (referenceDate.isBefore(movie.getReleaseDate())) {
+			return MovieStatus.UPCOMING;
+		} else if (movie.getEndShowingDate() != null && referenceDate.isAfter(movie.getEndShowingDate())) {
+			return MovieStatus.ARCHIVED;
+		} else {
+			return MovieStatus.CURRENT;
 		}
 	}
 
 	private void setMovieRelations(Movie movie, MovieCreateRequest request) {
-		setMovieRelationsFromIds(movie, request.getGenreIds(), request.getCastIds(), request.getDirectorIds(),
-				request.getScreenwriterIds());
-	}
-
-	private void setMovieRelations(Movie movie, MovieDto movieDto) {
-		setMovieRelationsFromIds(movie, movieDto.getGenreIds(), movieDto.getCastIds(), movieDto.getDirectorIds(),
-				movieDto.getScreenwriterIds());
-	}
-
-	private void setMovieRelationsFromIds(Movie movie, List<Long> genreIds, List<Long> castIds, List<Long> directorIds,
-			List<Long> screenwriterIds) {
-		if (genreIds != null && !genreIds.isEmpty()) {
-			Set<Genre> genres = new HashSet<>(genreRepository.findAllById(genreIds));
-			movie.setGenres(genres);
+		if (request.getGenreIds() != null && !request.getGenreIds().isEmpty()) {
+			movie.setGenres(new HashSet<>(genreRepository.findAllById(request.getGenreIds())));
 		}
-
-		if (castIds != null && !castIds.isEmpty()) {
-			Set<Person> cast = new HashSet<>(personRepository.findAllById(castIds));
-			movie.setCast(cast);
+		if (request.getCastIds() != null && !request.getCastIds().isEmpty()) {
+			movie.setCast(new HashSet<>(personRepository.findAllById(request.getCastIds())));
 		}
-
-		if (directorIds != null && !directorIds.isEmpty()) {
-			Set<Person> directors = new HashSet<>(personRepository.findAllById(directorIds));
-			movie.setDirectors(directors);
+		if (request.getDirectorIds() != null && !request.getDirectorIds().isEmpty()) {
+			movie.setDirectors(new HashSet<>(personRepository.findAllById(request.getDirectorIds())));
 		}
-
-		if (screenwriterIds != null && !screenwriterIds.isEmpty()) {
-			Set<Person> screenwriters = new HashSet<>(personRepository.findAllById(screenwriterIds));
-			movie.setScreenwriters(screenwriters);
+		if (request.getScreenwriterIds() != null && !request.getScreenwriterIds().isEmpty()) {
+			movie.setScreenwriters(new HashSet<>(personRepository.findAllById(request.getScreenwriterIds())));
 		}
 	}
 
-	private void updateMovieRelations(Movie movie, MovieDto movieDto) {
-		movie.setGenres(new HashSet<>());
-		movie.setCast(new HashSet<>());
-		movie.setDirectors(new HashSet<>());
-		movie.setScreenwriters(new HashSet<>());
+	private void updateMovieRelations(Movie movie, MovieUpdateRequest request) {
+		movie.getGenres().clear();
+		movie.getCast().clear();
+		movie.getDirectors().clear();
+		movie.getScreenwriters().clear();
 
-		setMovieRelations(movie, movieDto);
+		if (request.getGenreIds() != null && !request.getGenreIds().isEmpty()) {
+			movie.getGenres().addAll(new HashSet<>(genreRepository.findAllById(request.getGenreIds())));
+		}
+		if (request.getCastIds() != null && !request.getCastIds().isEmpty()) {
+			movie.getCast().addAll(new HashSet<>(personRepository.findAllById(request.getCastIds())));
+		}
+		if (request.getDirectorIds() != null && !request.getDirectorIds().isEmpty()) {
+			movie.getDirectors().addAll(new HashSet<>(personRepository.findAllById(request.getDirectorIds())));
+		}
+		if (request.getScreenwriterIds() != null && !request.getScreenwriterIds().isEmpty()) {
+			movie.getScreenwriters().addAll(new HashSet<>(personRepository.findAllById(request.getScreenwriterIds())));
+		}
+	}
+
+	private void handlePosterUpload(MultipartFile posterFile, Movie movie) {
+		if (posterFile != null && !posterFile.isEmpty()) {
+			String posterFileName = savePosterFile(posterFile);
+			movie.setPosterFileName(posterFileName);
+		}
+	}
+
+	private void handlePosterUpdate(Movie movie, MultipartFile posterFile, Boolean removePoster) {
+		if (posterFile != null && !posterFile.isEmpty()) {
+			deletePosterFile(movie.getPosterFileName());
+			String newPosterFileName = savePosterFile(posterFile);
+			movie.setPosterFileName(newPosterFileName);
+		} else if (Boolean.TRUE.equals(removePoster)) {
+			deletePosterFile(movie.getPosterFileName());
+			movie.setPosterFileName(null);
+		}
 	}
 
 	private String savePosterFile(MultipartFile file) {
 		try {
-			if (uploadDir == null) {
-				logger.warn("Upload directory is not configured, using temporary directory");
-				uploadDir = System.getProperty("java.io.tmpdir");
-			}
-
 			String originalFileName = file.getOriginalFilename();
-			String fileExtension = originalFileName != null
-					? originalFileName.substring(originalFileName.lastIndexOf("."))
-					: ".jpg";
-			String fileName = UUID.randomUUID() + fileExtension;
+			String extension = Optional.ofNullable(originalFileName).filter(name -> name.contains("."))
+					.map(name -> name.substring(name.lastIndexOf("."))).orElse(".jpg");
 
+			String fileName = UUID.randomUUID() + extension;
 			Path uploadPath = Paths.get(uploadDir, "posters");
 			Files.createDirectories(uploadPath);
 
 			Path filePath = uploadPath.resolve(fileName);
 			Files.write(filePath, file.getBytes());
 
-			logger.info("Poster file saved: {}", fileName);
+			log.debug("Poster saved: {}", fileName);
 			return fileName;
-
 		} catch (IOException e) {
-			logger.error("Failed to save poster file", e);
-			throw new RuntimeException("Failed to save poster file", e);
+			log.error("Failed to save poster", e);
+			throw new RuntimeException("Failed to save poster", e);
 		}
 	}
 
 	private void deletePosterFile(String fileName) {
-		if (fileName == null || fileName.isEmpty()) {
+		if (fileName == null || fileName.isBlank()) {
 			return;
 		}
 
 		try {
-			Path filePath = Paths.get(uploadDir, "posters", fileName);
-			if (Files.exists(filePath)) {
-				Files.delete(filePath);
-				logger.info("Poster file deleted: {}", fileName);
+			Path path = Paths.get(uploadDir, "posters", fileName);
+			if (Files.exists(path)) {
+				Files.delete(path);
+				log.debug("Poster deleted: {}", fileName);
 			}
 		} catch (IOException e) {
-			logger.error("Failed to delete poster file: {}", fileName, e);
+			log.error("Failed to delete poster: {}", fileName, e);
 		}
 	}
 
 	private String determineContentType(String fileName) {
-		if (fileName.toLowerCase().endsWith(".jpg") || fileName.toLowerCase().endsWith(".jpeg")) {
-			return "image/jpeg";
-		} else if (fileName.toLowerCase().endsWith(".png")) {
-			return "image/png";
-		} else if (fileName.toLowerCase().endsWith(".gif")) {
-			return "image/gif";
-		} else if (fileName.toLowerCase().endsWith(".webp")) {
-			return "image/webp";
+		if (fileName == null) {
+			return MediaType.APPLICATION_OCTET_STREAM_VALUE;
 		}
-		return "application/octet-stream";
+
+		String lower = fileName.toLowerCase();
+		if (lower.endsWith(".jpg") || lower.endsWith(".jpeg")) {
+			return "image/jpeg";
+		} else if (lower.endsWith(".png")) {
+			return "image/png";
+		} else if (lower.endsWith(".gif")) {
+			return "image/gif";
+		} else if (lower.endsWith(".webp")) {
+			return "image/webp";
+		} else {
+			return MediaType.APPLICATION_OCTET_STREAM_VALUE;
+		}
+	}
+
+	private MovieDto enrichWithComputedFields(Movie movie) {
+		MovieDto dto = movieMapper.toDto(movie);
+		MovieStatus status = calculateStatus(movie, LocalDate.now());
+
+		dto.setStatus(status);
+		dto.setCurrentlyShowing(status == MovieStatus.CURRENT);
+		dto.setUpcoming(status == MovieStatus.UPCOMING);
+		dto.setArchived(status == MovieStatus.ARCHIVED);
+		dto.setActive(status == MovieStatus.CURRENT || status == MovieStatus.UPCOMING);
+
+		return dto;
 	}
 }
